# ids-bits-builder

./: .gitignore  CMakeLists.txt  README.md  bits_structures.hpp  constants.hpp  ids_builder.cpp  ids_builder.hpp  ids_field.hpp  main.cpp
headers/: ids_builder.h  ids_field.h
src/: ids_builder.cpp  ids_field.cpp
